--- a/css/styles.css
+++ b/css/styles.css
@@ -730,12 +730,11 @@ img {
   background-color: #404bbf;
 }
 
-/* media Section_4 Tablet */
+/* media footer Tablet */
 
 @media only screen and (min-width: 768px) {
   .footercon {
     display: flex;
-
     flex-direction: column;
   }
   .footer-container {
@@ -767,10 +766,15 @@ img {
   }
 }
 
-/* media Section_4 Desktop */
+/* media footer Desktop */
 @media only screen and (min-width: 1158px) {
   .footercon {
-    display: flex;
+    flex-direction: row;
+    padding: 100px 0;
+  }
+  .footer-logo-soc {
+    gap: 120px;
+    margin-right: 80px;
   }
 }
 
