--- a/css/styles.css
+++ b/css/styles.css
@@ -594,6 +594,13 @@ img {
     width: calc((100% - 48px) / 3);
   }
 }
+
+@media only screen and (max-width: 1158px) {
+  .overlay-text {
+    display: none;
+  }
+}
+
 /* footer*/
 
 .page-footer {
